example/src/snapshots/rust_sitter_example__words__tests__words_grammar-2.snap
---
source: example/src/words.rs
assertion_line: 27
expression: "grammar::parse(\"hello\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "symbol 104",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 101",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 108",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 108",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 111",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 5,
            end: 5,
        },
    ],
)
