example/src/snapshots/rust_sitter_example__words__tests__words_grammar-3.snap
---
source: example/src/words.rs
expression: "grammar::parse(\"ifhello\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "symbol 105",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 102",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 104",
            ),
            start: 2,
            end: 2,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 101",
            ),
            start: 3,
            end: 3,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 108",
            ),
            start: 4,
            end: 4,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 108",
            ),
            start: 5,
            end: 5,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 111",
            ),
            start: 6,
            end: 6,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 7,
            end: 7,
        },
    ],
)
