example/src/snapshots/rust_sitter_example__words__tests__words_grammar.snap
---
source: src/words.rs
expression: "grammar::parse(\"if\")"
---
Err(
    [
        ParseError {
            reason: UnexpectedToken(
                "end",
            ),
            start: 0,
            end: 0,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 1,
            end: 1,
        },
        ParseError {
            reason: UnexpectedToken(
                "symbol 0",
            ),
            start: 2,
            end: 2,
        },
    ],
)
